--- a/activities/1.1-basic-jupyter-notebook.ipynb
+++ b/activities/1.1-basic-jupyter-notebook.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f2b4273a",
    "metadata": {},
    "outputs": [
@@ -39,13 +39,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, JupyterLab!\n"
+      "Hello, Hema \n"
      ]
     }
    ],
    "source": [
     "# This is a Python code cell\n",
-    "print('Hello, JupyterLab!')"
+    "print('Hello, Hema ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20a54ea3",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b5489f9",
+   "metadata": {},
+   "source": [
+    "Hema"
    ]
   },
   {
@@ -116,6 +130,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "644c88ef",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7869dd96",
+   "metadata": {},
+   "source": [
+    "JupyterLab Shortcuts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4a9f2188",
    "metadata": {},
    "source": [
@@ -159,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
