--- a/src/2-bar-plot.ipynb
+++ b/src/2-bar-plot.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -35,23 +35,53 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "def validate_data(categories, values):\n",
+    "    if not isinstance(categories, list) or not isinstance(values, list):\n",
+    "        raise ValueError(\"Categories and values must be lists.\")\n",
+    "    if len(categories) == 0 or len(values) == 0:\n",
+    "        raise ValueError(\"Categories and values lists cannot be empty.\")\n",
+    "    if len(categories) != len(values):\n",
+    "        raise ValueError(\"Categories and values lists must have the same length.\")\n",
+    "    if any(not isinstance(category, str) for category in categories):\n",
+    "        raise ValueError(\"All categories must be strings.\")\n",
+    "    if any(not isinstance(value, (int, float)) for value in values):\n",
+    "        raise ValueError(\"All values must be numbers.\")\n",
     "\n",
     "# Data\n",
     "categories = ['A', 'B', 'C', 'D']\n",
     "values = [5, 7, 3, 9]\n",
     "\n",
-    "# Bar colors\n",
-    "colors = ['red', 'blue', 'green', 'orange']\n",
+    "try:\n",
+    "    # Validate data\n",
+    "    validate_data(categories, values)\n",
+    "    \n",
+    "    # Bar colors\n",
+    "    colors = ['red', 'blue', 'green', 'orange']\n",
     "\n",
-    "# Create bar plot\n",
-    "plt.bar(categories, values, color=colors)\n",
+    "    # Create bar plot\n",
+    "    plt.bar(categories, values, color=colors)\n",
     "\n",
-    "# Add title\n",
-    "plt.title('Bar Plot of Categories and Values')\n",
+    "    # Add title\n",
+    "    plt.title('Bar Plot of Categories and Values')\n",
     "\n",
-    "# Show plot\n",
-    "plt.show()\n"
+    "    # Show plot\n",
+    "    plt.show()\n",
+    "\n",
+    "except ValueError as e:\n",
+    "    print(f\"Data validation error: {e}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"An unexpected error occurred: {e}\")\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
