--- a/src/1-line-plot.ipynb
+++ b/src/1-line-plot.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,30 +43,36 @@
     "    if len(data) == 0:\n",
     "        raise ValueError(\"Input data array is empty.\")\n",
     "\n",
-    "# Create an array of values from 0 to 10\n",
-    "x = np.arange(0, 11)  \n",
-    "validate_data(x)\n",
+    "try:\n",
+    "    # Create an array of values from 0 to 10\n",
+    "    x = np.arange(0, 11)\n",
+    "    validate_data(x)\n",
+    "    \n",
+    "    # Square each value in the array\n",
+    "    y = x**2\n",
+    "    validate_data(y)\n",
+    "    \n",
+    "    # Plot the values\n",
+    "    plt.plot(x, y, marker='o', linestyle='-', color='b', label='y = x^2')\n",
+    "    \n",
+    "    # Add title and labels\n",
+    "    plt.title(\"Square of X\")\n",
+    "    plt.xlabel(\"X\")\n",
+    "    plt.ylabel(\"Square of X\")\n",
+    "    \n",
+    "    # Add legend\n",
+    "    plt.legend()\n",
+    "    \n",
+    "    # Add grid lines\n",
+    "    plt.grid(True)\n",
+    "    \n",
+    "    # Display the plot\n",
+    "    plt.show()\n",
     "\n",
-    "# Square each value in the array\n",
-    "y = x**2\n",
-    "validate_data(y)\n",
-    "\n",
-    "# Plot the values\n",
-    "plt.plot(x, y, marker='o', linestyle='-', color='b', label='y = x^2')\n",
-    "\n",
-    "# Add title and labels\n",
-    "plt.title(\"Square of X\")\n",
-    "plt.xlabel(\"X\")\n",
-    "plt.ylabel(\"Square of X\")\n",
-    "\n",
-    "# Add legend\n",
-    "plt.legend()\n",
-    "\n",
-    "# Add grid lines\n",
-    "plt.grid(True)\n",
-    "\n",
-    "# Display the plot\n",
-    "plt.show()\n",
+    "except ValueError as e:\n",
+    "    print(f\"Data validation error: {e}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"An unexpected error occurred: {e}\")\n",
     "\n"
    ]
   },
